kubernetes/apps/dbms/redis-haproxy/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-haproxy-deployment
  namespace: dbms
  labels:
    app: redis-haproxy
  annotations:
    configmap.reloader.stakater.com/reload: redis-haproxy-config

spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis-haproxy
  template:
    metadata:
      name: haproxy-pod
      labels:
        app: redis-haproxy
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - redis-haproxy
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: redis-haproxy
          image: haproxy:2.7
          ports:
            - containerPort: 8080
            - containerPort: 6379
            - containerPort: 6380
            - containerPort: 26379
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
              readOnly: true
          resources:
            requests:
              cpu: 15m
              memory: 64M
            limits:
              cpu: 15m
              memory: 64M
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: redis-haproxy-config
