kubernetes/apps/dbms/redis-haproxy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app redis-ui
  namespace: dbms
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-system-internal@kubernetescrd"
spec:
  rules:
    - host: redis-ui.${SECRET_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-haproxy
                port:
                  number: 8080
